--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="logo.png" alt="لوگوی اخبار اویسینا" />
+            <img src="images/logo.png" alt="لوگوی اخبار اویسینا" />
         </div>
         
         <div class="subject-tabs">
