made the new webpages

--- a/iran/iran.html
+++ b/iran/iran.html
@@ -15,9 +15,9 @@
         </div></a>
         
         <div class="subject-tabs">
-            <a href="covid.html" class="subject-tab">کووید-۱۹</a>
+            <a href="../covid/covid.html" class="subject-tab">کووید-۱۹</a>
             <a href="../intl/international.html" class="subject-tab">سلامت بین‌المللی</a>
-            <a href="../iran/iran.html" class="subject-tab">ایران</a>
+            <a href="iran.html" class="subject-tab">ایران</a>
             <a href="../usa/usa.html" class="subject-tab">ایالات متحده</a>
         </div>
     </div>
