--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     
     <div class="articles">
-        <a href="article1.html" class="article">
+        <a href="HA/article1.html" class="article">
             <h2>مقاله ۱</h2>
             <p>این توضیحات مقاله ۱ است.</p>
             <img src="article1.jpg" alt="مقاله ۱" />
