--- a/HA/article1.html
+++ b/HA/article1.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html" class="logo-link">
+        <a href="../index.html" class="logo-link">
             <div class="logo">
-                <img src="logo.png" alt="لوگوی اخبار اویسینا" />
+                <img src="../images/logo.png" alt="لوگوی اخبار اویسینا" />
             </div>
             <span>اخبار اویسینا</span>
         </a>
