--- a/HA/article1.html
+++ b/HA/article1.html
@@ -3,7 +3,7 @@
 <head>
     <title>مقاله ۱</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet"href="../main.css">
+    <link rel="stylesheet"href="../art.css">
 </head>
 <body>
     <div class="header">
