--- a/HA/article1.html
+++ b/HA/article1.html
@@ -3,13 +3,13 @@
 <head>
     <title>مقاله ۱</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet"href="../art.css">
+    <link rel="stylesheet"href="../main.css">
 </head>
 <body>
     <div class="header">
         <a href="../index.html" class="logo-link">
             <div class="logo">
-                <img src="../images/logo.png" alt="لوگوی اخبار اویسینا" />
+                <img src="../images/logo.png" />
             </div>
             <span>اخبار اویسینا</span>
         </a>
