--- a/HA/article1.html
+++ b/HA/article1.html
@@ -11,7 +11,7 @@
             <div class="logo">
                 <img src="../images/logo.png" />
             </div>
-            <span>اخبار اویسینا</span>
+            <span>ابن سینا </span>
         </a>
     </div>
     
