--- a/HA/article1.html
+++ b/HA/article1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>مقاله ۱</title>
+    <title>اخبار  ابن سینا</title>
     <meta charset="UTF-8">
     <link rel="stylesheet"href="../art.css">
 </head>
@@ -11,7 +11,7 @@
             <div class="logo">
                 <img src="../images/logo.png" />
             </div>
-            <span>ابن سینا </span>
+            <span>ابن سینا</span>
         </a>
     </div>
     
