--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>اخبار  ابن سینا</title>
     <meta charset="UTF-8">
     <link rel="stylesheet"href="main.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
     <div class="header">
