imaging of article changed

--- a/HA/article1.html
+++ b/HA/article1.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>اخبار  ابن سینا</title>
+    <title>مقاله ۱</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet"href="../art.css">
+    <link rel="stylesheet" href="../art.css">
+    <style>
+        /* Additional styles specific to the article page */
+
+        /* Styling for the article container */
+        .article-container {
+            max-width: 800px;
+            margin: 50px auto;
+            background-color: white;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Styling for the article image */
+        .article-image {
+            width: 100%;
+            border-radius: 5px;
+            overflow: hidden; /* Hide any overflowing content, like large images */
+        }
+
+        .article-image img {
+            width: 100%;
+            height: auto;
+        }
+
+        /* Styling for the article title */
+        .article-title {
+            font-size: 24px;
+            margin-top: 20px;
+            font-family: "Cheltenham", serif;
+            text-align: center;
+        }
+
+        /* Styling for the article text container */
+        .article-text-container {
+            margin-top: 20px;
+        }
+
+        /* Styling for the article text */
+        .article-text {
+            font-size: 18px;
+            line-height: 1.6;
+            font-family: "Georgia", serif;
+            color: #333;
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
@@ -16,12 +63,19 @@
     </div>
     
     <div class="article-container">
-        <div class="article-image"></div>
+        <div class="article-image">
+            <img src="../images/covid1.png" alt="تصویر مقاله ۱" />
+        </div>
         <h1 class="article-title">مقاله ۱</h1>
-        <p class="article-text">
-            این مقاله ۱ است. این محتوای نمونه برای مقاله مورد نظر است.
-            بیشتر اطلاعات و جزئیات مرتبط با مقاله را اینجا قرار دهید.
-        </p>
+        <div class="article-text-container">
+            <p class="article-text">
+                COVID-19 دیگر یک اورژانس عمومی جهانی بهداشت نمی‌باشد، سازمان بهداشت جهانی این اعلام را در تاریخ 5 مه انجام داد.
+
+                ...
+                (Your text continues here)
+                ...
+            </p>
+        </div>
     </div>
 </body>
 </html>
