--- a/HA/article1.html
+++ b/HA/article1.html
@@ -112,7 +112,9 @@
               
             </p>
         </div>
-        <p class="article-byline">نویسنده: نام نویسنده</p>
+        <p class="article-byline">مکنزی پریلامان: اخبار علمی</p>
+        <p class="article-byline">E-mail:ibnsinanews@gmail.com</p>
+
     </div>
 </body>
 </html>
