--- a/HA/article1.html
+++ b/HA/article1.html
@@ -114,6 +114,8 @@
         </div>
         <p class="article-byline">مکنزی پریلامان: اخبار علمی</p>
         <p class="article-byline">E-mail:ibnsinanews@gmail.com</p>
+        <p class="article-byline">Image Credit:CHANDAN KHANNA/AFP VIA GETTY IMAGES</p>
+
 
     </div>
 </body>
