--- a/HA/article1.html
+++ b/HA/article1.html
@@ -76,7 +76,7 @@
         <div class="article-image">
             <img src="../images/covid1.png" alt="تصویر مقاله ۱" />
         </div>
-        <h1 class="article-title">مقاله ۱</h1>
+        <h1 class="article-title">سازمان بهداشت جهانی (WHO) پایان اورژانس عمومی جهانی بهداشت عمومی کووید-۱۹ را اعلام می‌کند.</h1>
         <div class="article-text-container">
             <p class="article-text">
                 COVID-19 دیگر یک اورژانس عمومی جهانی بهداشت نمی‌باشد، سازمان بهداشت جهانی این اعلام را در تاریخ 5 مه انجام داد.
