--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <div class="articles">
         <a href="HA/article1.html" class="article">
-            <h2>مقاله ۱</h2>
+            <h2>سازمان بهداشت جهانی (WHO) پایان اورژانس عمومی جهانی بهداشت عمومی کووید-۱۹ را اعلام می‌کند.</h2>
             <p>این توضیحات مقاله ۱ است.</p>
             <img src="article1.jpg" alt="مقاله ۱" />
         </a>
