--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="articles">
         <a href="HA/article1.html" class="article">
             <h2>سازمان بهداشت جهانی (WHO) پایان اورژانس عمومی جهانی بهداشت عمومی کووید-۱۹ را اعلام می‌کند.</h2>
-            <p>این توضیحات مقاله ۱ است.</p>
-            <img src="article1.jpg" alt="مقاله ۱" />
+            <p>این نشان دهنده تغییر به اقدامات بلند مدت برای رسیدگی به ویروس کرونا است.</p>
+            <img src="article1.png" alt="مقاله ۱" />
         </a>
         <a href="article2.html" class="article">
             <h2>مقاله ۲</h2>
