--- a/HA/article1.html
+++ b/HA/article1.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="../art.css">
     <style>
         /* Additional styles specific to the article page */
-
+        .article-byline {
+            font-size: 16px;
+            color: #666;
+            text-align: center;
+        }
         /* Styling for the article container */
        
     </style>
