--- a/HA/article1.html
+++ b/HA/article1.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>سازمان بهداشت جهانی (WHO) پایان اورژانس عمومی جهانی بهداشت عمومی کووید-۱۹ را اعلام می‌کند.</title>
+    <title>مقاله ۱</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../art.css">
-  
+    <style>
+        /* Additional styles specific to the article page */
+
+        /* Styling for the article container */
+        .article-container {
+            max-width: 800px;
+            margin: 50px auto;
+            background-color: white;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            font-family: "Georgia", serif;
+        }
+
+        /* Styling for the article image */
+        .article-image {
+            width: 100%;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+
+        .article-image img {
+            width: 100%;
+            height: auto;
+        }
+
+        /* Styling for the article title */
+        .article-title {
+            font-size: 32px;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-family: "Cheltenham", serif;
+            text-align: center;
+        }
+
+        /* Styling for the article text container */
+        .article-text-container {
+            margin-top: 20px;
+        }
+
+        /* Styling for the article text */
+        .article-text {
+            font-size: 18px;
+            line-height: 2.0;
+            color: #333;
+            text-align: justify;
+            text-indent: 3em; /* Add indentation to the paragraphs */
+            margin-bottom: 30px; /* Add spacing between paragraphs */
+        }
+
+        /* Styling for the article byline */
+        .article-byline {
+            font-size: 16px;
+            color: #666;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
