--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="HA/article1.html" class="article">
             <h2>سازمان بهداشت جهانی (WHO) پایان اورژانس عمومی جهانی بهداشت عمومی کووید-۱۹ را اعلام می‌کند.</h2>
             <p>این نشان دهنده تغییر به اقدامات بلند مدت برای رسیدگی به ویروس کرونا است.</p>
-            <img src="article1.png" alt="مقاله ۱" />
+            <img src="images/article1.png" alt="مقاله ۱" />
         </a>
         <a href="article2.html" class="article">
             <h2>مقاله ۲</h2>
