--- a/HA/article1.html
+++ b/HA/article1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>مقاله ۱</title>
+    <title>سازمان بهداشت جهانی (WHO) پایان اورژانس عمومی جهانی بهداشت عمومی کووید-۱۹ را اعلام می‌کند.</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../art.css">
     <style>
