--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
             <p>این توضیحات مقاله ۳ است.</p>
             <img src="article4.jpg" alt="مقاله ۳" />
         </a>
+        <a href="article4.html" class="article">
+            <h2>مقاله ۳</h2>
+            <p>این توضیحات مقاله ۳ است.</p>
+            <img src="article4.jpg" alt="مقاله ۳" />
+        </a>
+        <a href="article4.html" class="article">
+            <h2>مقاله ۳</h2>
+            <p>این توضیحات مقاله ۳ است.</p>
+            <img src="article4.jpg" alt="مقاله ۳" />
+        </a>
+        <a href="article4.html" class="article">
+            <h2>مقاله ۳</h2>
+            <p>این توضیحات مقاله ۳ است.</p>
+            <img src="article4.jpg" alt="مقاله ۳" />
+        </a>
+        <a href="article4.html" class="article">
+            <h2>مقاله ۳</h2>
+            <p>این توضیحات مقاله ۳ است.</p>
+            <img src="article4.jpg" alt="مقاله ۳" />
+        </a>
+        <a href="article4.html" class="article">
+            <h2>مقاله ۳</h2>
+            <p>این توضیحات مقاله ۳ است.</p>
+            <img src="article4.jpg" alt="مقاله ۳" />
+        </a>
 
         <!-- Add more article cards as needed -->
     </div>
