--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
         <a href="article4.html" class="article">
             <h2>مقاله ۳</h2>
             <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article4.jpg" alt="مقاله ۳" />
+            <img src="images/article1.png" alt="مقاله ۱" />
         </a>
         <a href="article4.html" class="article">
             <h2>مقاله ۳</h2>
             <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article4.jpg" alt="مقاله ۳" />
+            <img src="images/article1.png" alt="مقاله ۱" />
         </a>
         <a href="article4.html" class="article">
             <h2>مقاله ۳</h2>
             <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article4.jpg" alt="مقاله ۳" />
+            <img src="images/article1.png" alt="مقاله ۱" />
         </a>
         <a href="article4.html" class="article">
             <h2>مقاله ۳</h2>
             <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article4.jpg" alt="مقاله ۳" />
+            <img src="images/article1.png" alt="مقاله ۱" />
         </a>
         <a href="article4.html" class="article">
             <h2>مقاله ۳</h2>
