--- a/intl/international.html
+++ b/intl/international.html
@@ -25,10 +25,10 @@
     </div>
     
     <div class="articles">
-        <a href="article1.html" class="article">
-            <h2>مقاله ۱</h2>
-            <p>این توضیحات مقاله ۱ است.</p>
-            <img src="article1.jpg" alt="مقاله ۱" />
+        <a href="intlarticles/IntlArt1.html" class="article">
+            <h2>اداره غذا و داروی ایالات متحده (FDA) موافقت شتاب‌پذیری را برای درمان بیماری آلزایمر اعطا کرد.</h2>
+            <p>اقدام پس از آزمایش تأییدی برای تأیید فواید بالینی انجام شد.</p>
+            <img src="intlimages/Intlarticle1image.jpg" alt="مقاله ۱" />
         </a>
         <a href="article2.html" class="article">
             <h2>مقاله ۲</h2>
