putting on homepage

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <p>این نشان دهنده تغییر به اقدامات بلند مدت برای رسیدگی به ویروس کرونا است.</p>
             <img src="images/article1.png" alt="مقاله ۱" />
         </a>
-        <a href="article2.html" class="article">
-            <h2>مقاله ۲</h2>
-            <p>این توضیحات مقاله ۲ است.</p>
-            <img src="article2.jpg" alt="مقاله ۲" />
+        <a href="intl/intlarticles/IntlArt1.html" class="article">
+            <h2>اداره غذا و داروی ایالات متحده (FDA) موافقت شتاب‌پذیری را برای درمان بیماری آلزایمر اعطا کرد.</h2>
+            <p>اقدام پس از آزمایش تأییدی برای تأیید فواید بالینی انجام شد.</p>
+            <img src="intl/intlimages/Intlarticle1image.jpg" alt="مقاله ۲" />
         </a>
         <a href="article3.html" class="article">
             <h2>مقاله ۳</h2>
