made USA article, posted to pages

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <p>اقدام پس از آزمایش تأییدی برای تأیید فواید بالینی انجام شد.</p>
             <img src="intl/intlimages/Intlarticle1image.jpg" alt="مقاله ۲" />
         </a>
-        <a href="article3.html" class="article">
-            <h2>مقاله ۳</h2>
-            <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article3.jpg" alt="مقاله ۳" />
+        <a href="usa/USAarticles/USart1.html" class="article">
+            <h2>اداره غذا و داروی ایالات متحده (FDA) دومین محصول اسپری بینی نالوکسون بدون نیاز به نسخه را تأیید کرد.</h2>
+            <p></p>
+            <img src="usa/USAimages/USarticle1image.jpg" alt="مقاله ۳" />
         </a>
   <a href="article4.html" class="article">
             <h2>مقاله ۳</h2>
