--- a/usa/usa.html
+++ b/usa/usa.html
@@ -25,10 +25,10 @@
     </div>
     
     <div class="articles">
-        <a href="article1.html" class="article">
-            <h2>مقاله ۱</h2>
-            <p>این توضیحات مقاله ۱ است.</p>
-            <img src="article1.jpg" alt="مقاله ۱" />
+        <a href="USAarticles/USart1.html" class="article">
+            <h2>اداره غذا و داروی ایالات متحده (FDA) دومین محصول اسپری بینی نالوکسون بدون نیاز به نسخه را تأیید کرد.</h2>
+            <p></p>
+            <img src="USAimages/USarticle1image.jpg" alt="مقاله ۱" />
         </a>
         <a href="article2.html" class="article">
             <h2>مقاله ۲</h2>
