--- a/usa/USAarticles/USart1.html
+++ b/usa/USAarticles/USart1.html
@@ -18,15 +18,15 @@
     <div class="header">
         <a href="../../index.html" class="logo-link">
             <div class="logo">
-                <img src="../USAimages/USarticle1image.jpg" />
+                <img src="../../images/logo.png" />
             </div>
-            <span>ابن سینا</span>
+            <span></span>
         </a>
     </div>
     
     <div class="article-container">
         <div class="article-image">
-            <img src="../../images/covid1.png" alt="تصویر مقاله ۱" />
+            <img src="../USAimages/USarticle1image.jpg" alt="تصویر مقاله ۱" />
         </div>
         <h1 class="article-title">اداره غذا و داروی ایالات متحده (FDA) دومین محصول اسپری بینی نالوکسون بدون نیاز به نسخه را تأیید کرد.</h1>
         <div class="article-text-container">
