--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <img src="images/logo.png" alt="لوگوی اخبار اویسینا" />
             
         </div></a>
+        <span>ابن‌سینا</span>
+
         
         <div class="subject-tabs">
             <a href="covid/covid.html" class="subject-tab">کووید-۱۹</a>
