--- a/iran/iran.html
+++ b/iran/iran.html
@@ -24,25 +24,12 @@
     </div>
     
     <div class="articles">
-        <a href="article1.html" class="article">
-            <h2>مقاله ۱</h2>
-            <p>این توضیحات مقاله ۱ است.</p>
-            <img src="article1.jpg" alt="مقاله ۱" />
+        <a href="IRarticles/IRarticle1.html" class="article">
+            <h2>دستور العمل اتصال مراقبت‌های پزشکی به حجاب، واکنش‌های منفی در ایران را به همراه داشته است.</h2>
+            <p></p>
+            <img src="IRimage/IRimage1.jpg" alt="مقاله ۱" />
         </a>
-        <a href="article2.html" class="article">
-            <h2>مقاله ۲</h2>
-            <p>این توضیحات مقاله ۲ است.</p>
-            <img src="article2.jpg" alt="مقاله ۲" />
-        </a>
-        <a href="article3.html" class="article">
-            <h2>مقاله ۳</h2>
-            <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article3.jpg" alt="مقاله ۳" />
-        </a>
-  <a href="article4.html" class="article">
-            <h2>مقاله ۳</h2>
-            <p>این توضیحات مقاله ۳ است.</p>
-            <img src="article4.jpg" alt="مقاله ۳" />
+       
         </a>
 
         <!-- Add more article cards as needed -->
