--- a/usa/USAarticles/USart1.html
+++ b/usa/USAarticles/USart1.html
@@ -21,7 +21,14 @@
                 <img src="../../images/logo.png" />
             </div>
             <span></span>
+
         </a>
+        <div class="subject-tabs">
+            <a href="covid.html" class="subject-tab">کووید-۱۹</a>
+            <a href="../intl/international.html" class="subject-tab">سلامت بین‌المللی</a>
+            <a href="../iran/iran.html" class="subject-tab">ایران</a>
+            <a href="../usa/usa.html" class="subject-tab">ایالات متحده</a>
+        </div>
     </div>
     
     <div class="article-container">
