--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="images/logo.png" alt="لوگوی اخبار اویسینا" />
             
         </div></a>
-        <span></span>
+        <span>ابن سینا</span>
 
         
         <div class="subject-tabs">
