--- a/usa/USAarticles/USart1.html
+++ b/usa/USAarticles/USart1.html
@@ -20,7 +20,7 @@
             <div class="logo">
                 <img src="../../images/logo.png" />
             </div>
-            <span></span>
+            <span>ابن سینا</span>
 
         </a>
         <div class="subject-tabs">
