--- a/intl/intlarticles/IntlArt1.html
+++ b/intl/intlarticles/IntlArt1.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <title>اداره غذا و داروی ایالات متحده (FDA) موافقت شتاب‌پذیری را برای درمان بیماری آلزایمر اعطا کرد.</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../art.css">
   
 </head>
+<!-- Google tag (gtag.js) 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KZJMDRLSZ6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-KZJMDRLSZ6');
+</script>
+-->
 <body>
     <div class="header">
         <a href="../../index.html" class="logo-link">
