--- a/HA/article1.html
+++ b/HA/article1.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KZJMDRLSZ6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-KZJMDRLSZ6');
+    </script>
     <title>سازمان بهداشت جهانی (WHO) پایان اورژانس عمومی جهانی بهداشت عمومی کووید-۱۹ را اعلام می‌کند.</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../art.css">
