--- a/usa/usa.html
+++ b/usa/usa.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KZJMDRLSZ6"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-KZJMDRLSZ6');
-    </script>
+<head>
    
     <title>اخبار  ابن سینا</title>
     <meta charset="UTF-8">
