--- a/usa/USAarticles/USart1.html
+++ b/usa/USAarticles/USart1.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-    
+<head><!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-TC8VT62L');</script>
+        <!-- End Google Tag Manager -->
+
     <title>اداره غذا و داروی ایالات متحده (FDA) دومین محصول اسپری بینی نالوکسون بدون نیاز به نسخه را تأیید کرد.</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../art.css">
 </head>
 
-<body>
+<body><!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TC8VT62L"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
     <div class="header">
         <a href="../../index.html" class="logo-link">
             <div class="logo">
