--- a/usa/USAarticles/USart1.html
+++ b/usa/USAarticles/USart1.html
@@ -20,7 +20,7 @@
     <div class="header">
         <a href="../../index.html" class="logo-link">
             <div class="logo">
-                <img src="../../images/logo.png" />
+                <img src="../../images/articlelogo.jpeg" />
             </div>
             <span></span>
 
