--- a/HA/article1.html
+++ b/HA/article1.html
@@ -28,7 +28,7 @@
     <div class="header">
         <a href="../index.html" class="logo-link">
             <div class="logo">
-                <img src="../images/logo.png" />
+                <img src="../images/articlelogo.jpeg" />
             </div>
         </a>
         <div class="subject-tabs">
