--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
         <p></p>
         <img src="iran/IRimage/IRimage1.jpg" alt="مقاله ۱" />
     </a>
-       
+    <a href="intl/intlarticles/IntlArt2.html" class="article">
+        <h2>CDC توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کند.</h2>
+        <p></p>
+        <img src="intl/intlimages/intlarticle2image.jpg" alt="مقاله ۱" />
+    </a>
 
         <!-- Add more article cards as needed -->
     </div>
