--- a/intl/intlarticles/IntlArt2.html
+++ b/intl/intlarticles/IntlArt2.html
@@ -7,9 +7,23 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-TC8VT62L');</script>
         <!-- End Google Tag Manager -->
-    <title>CDC توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کند.</title>
+
+        <meta property="og:site_name" content="Ibn Sina News" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC" />
+<meta property="og:description" content="این ایمن‌سازی جدید اولین ایمن‌سازی تأییدشده و توصیه‌شده در ایالات متحده است که برای جلوگیری از بیماری شدید RSV در تمام نوزادان به‌کار می‌رود." />
+<meta property="og:url" content="https://avicennanews.me/intl/intlarticles/IntlArt2.html" />
+
+<meta name="twitter:card" content="Large Chem Molecule">
+<meta name="twitter:site" content="Ibn Sina News">
+<meta name="twitter:creator" content="CDC">
+<meta name="twitter:title" content="توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC">
+<meta name="twitter:description" content="این ایمن‌سازی جدید اولین ایمن‌سازی تأییدشده و توصیه‌شده در ایالات متحده است که برای جلوگیری از بیماری شدید RSV در تمام نوزادان به‌کار می‌رود.">
+<meta name="twitter:image" content="https://intl/intlimages/intlarticle2image.jpg">
+    <title>توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../art.css">
+
 </head>
 
 <body><!-- Google Tag Manager (noscript) -->
@@ -36,7 +50,7 @@
         <div class="article-image">
             <img src="../intlimages/intlarticle2image.jpg" alt="تصویر مقاله ۱" />
         </div>
-        <h1 class="article-title">CDC توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کند.</h1>
+        <h1 class="article-title"> توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC</h1>
         <div class="article-text-container">
             <p class="article-text">
                 سازمان مراقبت‌های بهداشتی آمریکا (CDC) توصیه‌ای جدید از تحصیح واکسن جدید از اواخر پاییز ارائه می‌دهد تا به کمک ایمن‌سازی کودکان تحت 8 ماه و برخی از کودکان بزرگتر با خطر افزایشی از بروز بیماری شدید ناشی از ویروس سینکیشیال تنفسی (RSV) محافظت شود.
