fixed image meta tag

--- a/intl/intlarticles/IntlArt2.html
+++ b/intl/intlarticles/IntlArt2.html
@@ -19,7 +19,7 @@
 <meta name="twitter:creator" content="CDC">
 <meta name="twitter:title" content="توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC">
 <meta name="twitter:description" content="این ایمن‌سازی جدید اولین ایمن‌سازی تأییدشده و توصیه‌شده در ایالات متحده است که برای جلوگیری از بیماری شدید RSV در تمام نوزادان به‌کار می‌رود.">
-<meta name="twitter:image" content="https://intl/intlimages/intlarticle2image.jpg">
+<meta name="twitter:image" content="https://avicennanews.me/intl/intlimages/intlarticle2image.jpg">
     <title>توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../art.css">
