--- a/intl/intlarticles/IntlArt2.html
+++ b/intl/intlarticles/IntlArt2.html
@@ -13,6 +13,7 @@
 <meta property="og:title" content="توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC" />
 <meta property="og:description" content="این ایمن‌سازی جدید اولین ایمن‌سازی تأییدشده و توصیه‌شده در ایالات متحده است که برای جلوگیری از بیماری شدید RSV در تمام نوزادان به‌کار می‌رود." />
 <meta property="og:url" content="https://avicennanews.me/intl/intlarticles/IntlArt2.html" />
+<meta property="og:image" content="https://avicennanews.me/intl/intlimages/intlarticle2image.jpg">
 
 <meta name="twitter:card" content="Large Chem Molecule">
 <meta name="twitter:site" content="Ibn Sina News">
