--- a/intl/intlarticles/IntlArt2.html
+++ b/intl/intlarticles/IntlArt2.html
@@ -10,7 +10,7 @@
 
         <meta property="og:site_name" content="Ibn Sina News" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC" />
+<meta property="og:title" content="CDC توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کند." />
 <meta property="og:description" content="این ایمن‌سازی جدید اولین ایمن‌سازی تأییدشده و توصیه‌شده در ایالات متحده است که برای جلوگیری از بیماری شدید RSV در تمام نوزادان به‌کار می‌رود." />
 <meta property="og:url" content="https://avicennanews.me/intl/intlarticles/IntlArt2.html" />
 <meta property="og:image" content="https://avicennanews.me/intl/intlimages/intlarticle2image.jpg">
@@ -21,7 +21,7 @@
 <meta name="twitter:title" content="توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC">
 <meta name="twitter:description" content="این ایمن‌سازی جدید اولین ایمن‌سازی تأییدشده و توصیه‌شده در ایالات متحده است که برای جلوگیری از بیماری شدید RSV در تمام نوزادان به‌کار می‌رود.">
 <meta name="twitter:image" content="https://avicennanews.me/intl/intlimages/intlarticle2image.jpg">
-    <title>توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC</title>
+    <title>CDC توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کند.</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../art.css">
 
@@ -49,9 +49,9 @@
     
     <div class="article-container">
         <div class="article-image">
-            <img src="../intlimages/intlarticle2image.jpg" alt="تصویر مقاله ۱" />
+            <img src="https://www.avicennanews.me/intl/intlimages/intlarticle2image.jpg" alt="تصویر مقاله ۱" />
         </div>
-        <h1 class="article-title"> توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کندCDC</h1>
+        <h1 class="article-title"> CDC توصیه می‌کند ابزار قدرتمندی را برای محافظت از نوزادان در برابر اصلی‌ترین علت بستری‌شدن فراهم کند.</h1>
         <div class="article-text-container">
             <p class="article-text">
                 سازمان مراقبت‌های بهداشتی آمریکا (CDC) توصیه‌ای جدید از تحصیح واکسن جدید از اواخر پاییز ارائه می‌دهد تا به کمک ایمن‌سازی کودکان تحت 8 ماه و برخی از کودکان بزرگتر با خطر افزایشی از بروز بیماری شدید ناشی از ویروس سینکیشیال تنفسی (RSV) محافظت شود.
