--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         <p></p>
         <img src="intl/intlimages/intlarticle2image.jpg" alt="مقاله ۱" />
     </a>
+    <a href="covid/COVIDarticles/CA2.html" class="article">
+        <h2>COVID-19  بر سلامت قلب تأثیر گذاشت و پزشکان هنوز در تلاشند که چگونه به کمک کنند.</h2>
+        <p></p>
+        <img src="covid/COVIDimages/covidimage2.jpg" alt="مقاله ۱" />
+    </a>
 
         <!-- Add more article cards as needed -->
     </div>
