--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         <p></p>
         <img src="covid/COVIDimages/covidimage2.jpg" alt="مقاله ۱" />
     </a>
+    <a href="usa/USAarticles/USart2.html" class="article">
+        <h2>هشدارهای مربوط به کووید برای برخی همچنان ادامه دارد، حتی با پایان یافتن وضعیت اضطراری فدرال</h2>
+        <p>در حالی که دستورات و قرنطینه‌ها مدت‌هاست که از بین رفته‌اند، این ویروس وجود ندارد و برای برخی آمریکایی‌ها ماسک نیز وجود ندارد.</p>
+        <img src="usa/USAimages/USphoto2.jpeg" alt="مقاله ۱" />
+    </a>
 
         <!-- Add more article cards as needed -->
     </div>
