--- a/usa/usa.html
+++ b/usa/usa.html
@@ -42,6 +42,11 @@
             <p></p>
             <img src="USAimages/USarticle1image.jpg" alt="مقاله ۱" />
         </a>
+        <a href="USAarticles/USart2.html" class="article">
+            <h2>هشدارهای مربوط به کووید برای برخی همچنان ادامه دارد، حتی با پایان یافتن وضعیت اضطراری فدرال</h2>
+            <p>در حالی که دستورات و قرنطینه‌ها مدت‌هاست که از بین رفته‌اند، این ویروس وجود ندارد و برای برخی آمریکایی‌ها ماسک نیز وجود ندارد.</p>
+            <img src="USAimages/USphoto2.jpeg" alt="مقاله ۱" />
+        </a>
         
 
         <!-- Add more article cards as needed -->
