--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
         <p>در حالی که دستورات و قرنطینه‌ها مدت‌هاست که از بین رفته‌اند، این ویروس وجود ندارد و برای برخی آمریکایی‌ها ماسک نیز وجود ندارد.</p>
         <img src="usa/USAimages/USphoto2.jpeg" alt="مقاله ۱" />
     </a>
+    <a href="covid/COVIDarticles/CA3.html" class="article">
+        <h2>واکسن‌های جدید کووید با افزایش نوع «اریس» در راه هستند</h2>
+        <p></p>
+        <img src="covid/COVIDimages/CA3image.jpeg" alt="مقاله ۱" />
+        <span class="article-date">تاریخ:۱۴ اوت ۲۰۲۳</span>
+    </a>
 
         <!-- Add more article cards as needed -->
     </div>
