--- a/usa/USAarticles/USart2.html
+++ b/usa/USAarticles/USart2.html
@@ -52,7 +52,7 @@
             <img src="https://www.avicennanews.me/usa/USAimages/USphoto2.jpeg" alt="تصویر مقاله ۱" />
         </div>
         <h1 class="article-title"> هشدارهای مربوط به کووید برای برخی همچنان ادامه دارد، حتی با پایان یافتن وضعیت اضطراری فدرال</h1>
-        <p class="article-date">تاریخ:۱۳ اوت ۲۰۲۳</p>
+        <p class="article-date">تاریخ:۱۲ مه ۲۰۲۳</p>
         <div class="article-text-container">
             <p class="article-text">
                 برای میلیون‌ها آمریکایی، وضعیت اضطراری کووید-19، آن گستره گیج‌کننده از قرنطینه‌ها، دستورات، اضطراب شناور آزاد و فرسودگی زمانی در طی دو سال گذشته به پایان رسید که توسط واکسن‌ها و داروهای ضد ویروسی به وجود آمد.
