--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
   
-    
+    <div class="small-header">
+
+        <button id="small-about-button" class="small-button">درباره ما</button>
+        <button id="small-email-button" class="small-button">به ما ایمیل بزنید</button>
+    </div>
+
+
     <div class="header">
         <a href="index.html">
         <div class="logo">
@@ -31,7 +37,7 @@
         <div class="header-content">
             <h1>
               <span class="date">اخبار پزشکی امروز</span>
-              <span class="date">ساخته کوروش خراسانی</span>
+              <span class="date">ساخته : سیروس خ.</span>
             <span class="date">تاریخ: <span id="current-date"></span></span>
             </h1>
         </div>
@@ -136,4 +142,73 @@
     </script>
     
 </body>
+<footer class="footer">
+    <div class="footer-left">
+        <img src="images/logo.png" alt="Footer Logo" class="footer-logo">
+    </div>
+    <div class="footer-right">
+        <ul class="footer-categories">
+            <li><a href="covid/covid.html">کووید-۱۹</a></li>
+            <li><a href="intl/international.html">سلامت بین‌المللی</a></li>
+            <li><a href="iran/iran.html">ایران</a></li>
+            <li><a href="usa/usa.html">ایالات متحده</a></li>
+            <!-- Add more categories as needed >درباره ما-->
+        </ul>
+        <a href="about.html" class="about-button">درباره ما</a>
+
+        <button id="email-button" class="email-button">به ما ایمیل بزنید</button>
+    </div>
+</footer>
+<script>
+    document.getElementById("email-button").addEventListener("click", function () {
+        // Create a temporary input element to copy the email to the clipboard
+        var tempInput = document.createElement("input");
+        tempInput.value = "ibnsinanews@gmail.com"; // Set the email address
+
+        // Append the input element to the document
+        document.body.appendChild(tempInput);
+
+        // Select the input element's content
+        tempInput.select();
+
+        // Copy the selected content to the clipboard
+        document.execCommand("copy");
+
+        // Remove the temporary input element
+        document.body.removeChild(tempInput);
+
+        // Provide user feedback (optional)
+        alert("آدرس ایمیل در کلیپ بورد کپی شد");
+    });
+</script>
+<script>
+    document.getElementById("small-email-button").addEventListener("click", function () {
+        var tempInput = document.createElement("input");
+        tempInput.value = "ibnsinanews@gmail.com"; // Set the email address
+        document.body.appendChild(tempInput);
+        tempInput.select();
+        document.execCommand("copy");
+        document.body.removeChild(tempInput);
+        alert("آدرس ایمیل در کلیپ بورد کپی شد");
+    });
+</script>
+<script>
+    document.getElementById("small-about-button").addEventListener("click", function () {
+        // Redirect the user to the "about.html" page
+        window.location.href = "about.html";
+    });
+
+    document.getElementById("small-email-button").addEventListener("click", function () {
+        // Your existing code for the "Email Us" button
+        var tempInput = document.createElement("input");
+        tempInput.value = "ibnsinanews@gmail.com"; // Set the email address
+        document.body.appendChild(tempInput);
+        tempInput.select();
+        document.execCommand("copy");
+        document.body.removeChild(tempInput);
+        alert("Email address copied to clipboard!");
+    });
+</script>
+
+
 </html>
