--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
             <img src="usa/USAimages/USarticle1image.jpg" alt="مقاله ۳" />
         </a>
         </div>
+
+        <div class="article-container">
+
+            <a href="intl/intlarticles/New-cancer-treatment-by-pfizer.html" class="article">
+                <h2>FDA ایالات متحده درمان سرطان خون فایزر را تایید کرده است</h2>
+                <p></p>
+                <img src="intl/intlimages/pfizerlogo.jpeg" alt="مقاله ۱" />
+            </a>
+            </div>
+
+
         </div>
         <!-- Add more article cards as needed NARROW STARTS HERE-->
 
