--- a/intl/international.html
+++ b/intl/international.html
@@ -71,6 +71,17 @@
             <img src="intlimages/intlarticle2image.jpg" alt="مقاله ۱" />
         </a>
         </div>
+
+        <div class="article-container">
+
+            <a href="intlarticles/New-cancer-treatment-by-pfizer.html" class="article">
+                <h2>FDA ایالات متحده درمان سرطان خون فایزر را تایید کرده است</h2>
+                <p></p>
+                <img src="intlimages/pfizerlogo.jpeg" alt="مقاله ۱" />
+            </a>
+            </div>
+
+
         </div>
        
 
