added meta tags

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TC8VT62L');</script>
     <!-- End Google Tag Manager -->
-    <title>اخبار  ابن سینا</title>
+    <title>Avicenna News</title>
+    <meta name="description" content="Avicennanews, Ibn Sina News, English medical news in Farsi">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Farsi medical articles, avicennanews, ibn sina news, reuters, NYT">
+    <meta name="author" content="Cyrus Khorassani">
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex" />
     <link rel="stylesheet"href="main.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
