--- a/usa/usa.html
+++ b/usa/usa.html
@@ -9,6 +9,10 @@
         <!-- End Google Tag Manager -->
    
     <title>اخبار  ابن سینا</title>
+    <meta name="description" content="Avicennanews, Ibn Sina News, English medical news in Farsi">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Farsi medical articles, avicennanews, ibn sina news, reuters, NYT">
+    <meta name="author" content="Cyrus Khorassani">
     <meta charset="UTF-8">
     <link rel="stylesheet"href="../main.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
