--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
             </a>
             </div>
 
+            <div class="article-container">
+
+                <a href="intl/intlarticles/stem-cell-eye-implant-shows-improvements-in-vision.html" class="article">
+                    <h2>سلول های بنیادی یک چشم در بهبود جراحات چشم دیگر امیدوار کننده هستند</h2>
+                    <p></p>
+                    <img src="intl/intlimages/eyeimage.jpg" alt="مقاله ۱" />
+                </a>
+                </div>
+
 
         </div>
         <!-- Add more article cards as needed NARROW STARTS HERE-->
